# vcu-model-2025

./: .gitignore  .gitmodules  CMakeLists.txt  __init__.py  vcu_binding.py
blocks/: AppsProcessor.h  BreakLight.h  TorqueMap.cpp
inc/: VcuModel.h  VcuParameters.h
inc/blocks/: AppsProcessor.h  BrakeLight.h  BseProcessor.h  Cooling.h  Indicator.h  ParkDriveSystem.h  Prndl.h  Steering.h  Stompp.h  TorqueMap.h  TractionControl.h
inc/util/: Debounce.h  Lookup1D.h  Lookup2D.h  LowPassFilter.h  PIDController.h  Timer.h
sil/: CMakeLists.txt  main.cpp  sil.h
src/: CMakeLists.txt  VcuModel.c  VcuModel.cpp  VcuModel.h  VcuParameters.h
src/blocks/: AppsProcessor.c  AppsProcessor.cpp  BrakeLight.c  BrakeLight.cpp  BreakLight.cpp  BseProcessor.c  Cooling.c  Cooling.cpp  Indicator.c  Indicator.cpp  ParkDriveSystem.c  Prndl.cpp  Steering.c  Steering.cpp  Stompp.c  Stompp.cpp  TorqueMap.c  TorqueMap.cpp  TractionControl.c  TractionControl.cpp
src/util/: Debounce.c  Debounce.cpp  Lookup1D.c  Lookup1D.cpp  Lookup2D.c  Lookup2D.cpp  LowPassFilter.c  LowPassFilter.cpp  PIDController.c  Timer.c  Timer.cpp
tests/: AppsProcessorTests.cpp  BrakeLightTests.cpp  CMakeLists.txt  StomppTests.cpp  TorqueMapTests.cpp  VcuTests.cpp  main.cpp
util/: CurveParameter.cpp  CurveParameter.h
